--- a/oncoFinder2/templates/metabolism/pathway_ajax_search.html
+++ b/oncoFinder2/templates/metabolism/pathway_ajax_search.html
@@ -7,6 +7,7 @@
               </div>
                 <h5><a href='{{path.name|slugify}}/{{path.id}}'>{{ path.name }}</a></h5>
                  <div class="text-muted small">
+                 AMCF:  <strong>{{path.amcf}}</strong><br/>
                  Genes: <strong>{{path.metabolismgene_set.count}}</strong> <br/>
                  
                  <!--  Components: <strong>40</strong> <br/>-->
