--- a/oncoFinder2/templates/mouse/pathway_ajax_search.html
+++ b/oncoFinder2/templates/mouse/pathway_ajax_search.html
@@ -3,13 +3,13 @@
           <li>
               <div class="well">
               <div class="pull-left path_list_picture">
-              <img src='/static/images/pathlist.jpg' alt='{{ path.name }}' title='{{ path.name }}'/>
+              <img src='/static/images/mousepath.jpg' alt='{{ path.name }}' title='{{ path.name }}'/>
               </div>
                 <h5><a href='{{path.name|slugify}}/{{path.id}}'>{{ path.name }}</a></h5>
                  <div class="text-muted small">
                  AMCF:  <strong>{{path.amcf}}</strong><br/>
-                 Genes: <strong>{{path.gene_set.count}}</strong> <br/>
-                 Nodes: <strong>{{path.node_set.count}}</strong> <br/>
+                 Genes: <strong>{{path.mousegene_set.count}}</strong> <br/>
+                 
                  <!--  Components: <strong>40</strong> <br/>-->
                  </div>
                  
