--- a/oncoFinder2/templates/mouse/test.html
+++ b/oncoFinder2/templates/mouse/test.html
@@ -5,12 +5,12 @@
 {% block content %}
 <div class="container">
 
-<h1>Testing Playground</h1>
+<h1>Mouse Testing Playground</h1>
 
 
 <h5>{{summ}}</h5>
 
-{{pathh}}
+{{input|safe}}
 
 
 
