--- a/oncoFinder2/templates/database/pathway_list.html
+++ b/oncoFinder2/templates/database/pathway_list.html
@@ -5,12 +5,11 @@
 {% block content %}
 <div class="container">
     <h1> <img src='/static/images/laboratory_info.png' style="width: 100px;"/>Biochem DataBase 
-    <button class="btn btn-active" >
-         &nbsp;OncoFinder Pathways
-    </button>
-     <button class="btn btn-default" onClick="location.href='/metabolism/pathways/'">
-         &nbsp;Metabolism Pathways
-      </button>
+    <div class="btn-group">
+        <button type="button" class="btn btn-active"  >Human Pathways</button>
+        <button type="button" class="btn btn-primary"  onClick="location.href='/mouse/pathways/'" >Mouse Pathways</button>
+        <button type="button" class="btn btn-primary"   onClick="location.href='/metabolism/pathways/'">Metabolism Pathways</button>
+    </div> 
      </h1>
     <span class="text-muted">
     Total ammount = <strong>{{allPathways}}</strong>  pathways
@@ -36,6 +35,7 @@
               </div>
                 <h5><a href='{{path.name|slugify}}/{{path.id}}'>{{ path.name }}</a></h5>
                  <div class="text-muted small">
+                 AMCF:  <strong>{{path.amcf}}</strong><br/>
                  Genes: <strong>{{path.gene_set.count}}</strong> <br/>
                  Nodes: <strong>{{path.node_set.count}}</strong> <br/>
                  <!--  Components: <strong>40</strong> <br/>-->
