--- a/oncoFinder2/templates/website/index.html
+++ b/oncoFinder2/templates/website/index.html
@@ -15,10 +15,10 @@ transcriptomic data {% endblock %}
         <input type="text" name="password" class="form-control" placeholder="Create a password" />
         <input type="submit" disabled="disabled" class="btn btn-lg btn-success" value="Sign up for OncoFinder" />
       </form>
-      <p>
+      <!-- <p>
         clicking "Sign up for OncoFinder", you agree to our <a href="#">terms of service</a>
          and <a href="#">privacy policy</a>. 
-      </p>
+      </p>-->
     </div>
     
     <div>  
@@ -36,8 +36,10 @@ transcriptomic data {% endblock %}
           <p style="text-align:center;">
           <img class="img-circle" style="width:150px;" src="/static/images/biology_add.png" alt="Generic placeholder image">
           </p>
-          <h2>More than 250 Pathways in Biochem Database</h2>
-          <p>Donec sed odio dui. Etiam porta sem malesuada magna mollis euismod. Nullam id dolor id nibh ultricies vehicula ut id elit. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Praesent commodo cursus magna.</p>
+          <h2>More than 800 Pathways in Biochem Database</h2>
+          <p>View pathways for cell signaling and metabolism in humans, as well as mouse signaling
+              pathways. Determine the genes that are related to each signaling pathway and create 
+              diagrams of the nodes and components of each pathway.</p>
           <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
         </div><!-- /.col-lg-4 -->
         <div class="col-lg-4">
@@ -45,15 +47,19 @@ transcriptomic data {% endblock %}
           <img class="img-circle" style="width:150px;" src="/static/images/e_learning_config.png" alt="Generic placeholder image">
           </p>
           <h2>Create and manage your Projects easily</h2>
-          <p>Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit. Cras mattis consectetur purus sit amet fermentum. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh.</p>
+          <p>Get a personal workspace that allows you to access your data anywhere. Organize your
+             datasets into multiple projects so that related documents are kept together. Quantify your data
+             by calculating pathway activation strength and drug score.</p>
           <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
         </div><!-- /.col-lg-4 -->
         <div class="col-lg-4">
           <p style="text-align:center;">
           <img class="img-circle" style="width:150px;" src="/static/images/laboratory_info.png" alt="Generic placeholder image">
           </p>
-          <h2>More than 100 Drugs and increasing</h2>
-          <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
+          <h2>More than 200 Drugs and increasing</h2>
+          <p>View the gene targets and signaling pathways of each drug to determine effects on gene
+             expression. Learn the typical dosage, side effects, and contraindications of a drug for
+             information about their clinical use.</p>
           <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
         </div><!-- /.col-lg-4 -->
       </div><!-- /.row --> 
@@ -65,7 +71,9 @@ transcriptomic data {% endblock %}
       <div class="row featurette">
         <div class="col-md-7">
           <h2 class="featurette-heading">OncoFinder v2.0 released <span class="text-muted">Now better and faster!</span></h2>
-          <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
+          <p class="lead">The OncoFinder algorithm is more accurate than ever. It minimizes the error rates for
+                          comparing gene expression data obtained from multiple platforms by mapping gene
+                          expression onto known signaling pathways, and results are calculated more quickly.</p>
         </div>
         <div class="col-md-5">
           <img class="featurette-image img-responsive" src="/static/images/oncoPicture.png" alt="Generic placeholder image">
@@ -80,7 +88,9 @@ transcriptomic data {% endblock %}
         </div>
         <div class="col-md-7">
           <h2 class="featurette-heading">Download full reports <span class="text-muted">in one single file!</span></h2>
-          <p class="lead">Donec ullamcorper nulla non metus auctor fringilla. Vestibulum id ligula porta felis euismod semper. Praesent commodo cursus magna, vel scelerisque nisl consectetur. Fusce dapibus, tellus ac cursus commodo.</p>
+          <p class="lead">OncoFinder allows you to retrieve all your calculations at once. Once your output file is
+                          generated, simply click the download button to get your report. Your output file may be
+                          downloaded at any time.</p>
         </div>
       </div>     
 </div>
