--- a/oncoFinder2/templates/base_profiles.html
+++ b/oncoFinder2/templates/base_profiles.html
@@ -32,7 +32,7 @@
       <div class="navbar-header" id="ws_nav">
         <a class="" href="/">
         <img src='/static/images/oncofinderLogo.png' alt='OncoFinder v2.0' title='OncoFinder v2.0'/>
-        Onco<span id="ws_finder">Finder</span></a>
+        </a>
       </div>
       
       <div class="navbar-right pr_header_menu" >
@@ -65,8 +65,8 @@
   <!-- FOOTER -->
     <div id="footer">
       <div class="container">
-        <p class="pull-left">Footer.</p>
-        <p class="pull-right"><a href="#">Back to top</a></p>
+        <!--  <p class="pull-left">Footer.</p>-->
+        <p class="pull-right">© 2012-{% now "Y" %} OncoFinder</p>
       </div>
     </div>
 
