--- a/oncoFinder2/templates/base_website.html
+++ b/oncoFinder2/templates/base_website.html
@@ -25,8 +25,8 @@
     <div class="container">
       <div class="navbar-header" id="ws_nav">
         <a class="" href="/">
-        <img src='/static/images/oncofinderLogo.png' alt='OncoFinder v2.0' title='OncoFinder v2.0'/>
-        Onco<span id="ws_finder">Finder</span></a>
+            <img src='/static/images/oncofinderLogo.png' alt='OncoFinder v2.0' title='OncoFinder v2.0'/>
+        </a>
       </div>
       <div class="navbar-right ws_signin_but">
        <button type="submit" class="btn btn-default" onClick="location.href='/login'">Sign in</button>
@@ -34,8 +34,8 @@
       <ul class="nav navbar-nav navbar-right ws_upp_menu">
             <li><a href="/">Home</a></li>
             <li><a href="/ws/about/">About</a></li>
-            <li><a href="/ws/blog/">Blog</a></li>
-            <li><a href="/ws/contact/">Contact</a></li>
+            <!--  <li><a href="/ws/blog/">Blog</a></li>
+            <li><a href="/ws/contact/">Contact</a></li>-->
      </ul>
      
     </div>
@@ -44,8 +44,8 @@
   <!-- FOOTER -->
     <div id="footer">
       <div class="container">
-        <p class="pull-left">Footer.</p>
-        <p class="pull-right"><a href="#">Back to top</a></p>
+        <!-- <p class="pull-left">Footer.</p> -->
+        <p class="pull-right">© 2012-{% now "Y" %} OncoFinder</p>
       </div>
     </div>
     
