--- a/oncoFinder2/templates/core/core_calculation_parameters.html
+++ b/oncoFinder2/templates/core/core_calculation_parameters.html
@@ -94,7 +94,7 @@
                 {{ form.calculate_ds2 }}&nbsp;&nbsp;&nbsp;&nbsp;
       </small>
                 <span class="glyphicon glyphicon-question-sign" data-toggle="tooltip"  data-placement="top" 
-                                             title="Here will be description of what PMS and DS means"  onClick="location.href='/project/new/'"></span>
+                                             title="Here will be description of what PMS and DS means"  ></span>
               </div>                                   
             </div>
           </div> 
