--- a/oncoFinder2/templates/core/test.html
+++ b/oncoFinder2/templates/core/test.html
@@ -8,16 +8,69 @@
 <h1>Testing Playground</h1>
 
 
-<h5>{{summ}}</h5>
+<h5>task id = {{task_id}}</h5>
 
-{{pathh}}
+<button class="btn btn-primary" id="start">Start Celery job</button>
+<br/>
+<br/>
 
-
+<div class="progress">
+  <div class="progress-bar" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100" style="width:1%">
+    0%
+  </div>
+</div>
 
 
 
 
 
 </div>
+
+<script type="text/javascript">
+
+$(function(){
+	
+	
+	var PollState = function(task) {
+		
+		$.ajax({
+			type: "POST",
+			url: "/task_status/",
+			data: {
+				   task_id: task
+				   }
+		}).fail(function(event, jqxhr, settings, thrownError ) {
+			  alert( jqxhr + settings );})
+		.done(function(data){ console.log(data);
+		                      if(data['state']!="SUCCESS"){
+		                    	  console.log(data['state']);
+		                    	  setTimeout(function(){PollState(task);}, 10000);
+		                      }
+		                      else {
+		                    	  console.log(data['state'] + " Task done!!!");
+		                      }
+		                      
+		});
+		
+		
+	
+	}
+	
+	//PollState("{{task_id}}");
+	
+	testfunc = function(txt){
+		var dt = new Date();
+		var time = dt.getHours() + ":" + dt.getMinutes() + ":" + dt.getSeconds()
+		console.log(time + txt);
+		setTimeout(function(){testfunc(txt);}, 5000);
+		
+	}
+	//testfunc("maza fakkka")
+	
+	
+});
+
+
+</script>
 
 {%endblock%}
