change website index page

--- a/oncoFinder2/templates/website/index.html
+++ b/oncoFinder2/templates/website/index.html
@@ -9,13 +9,15 @@ transcriptomic data {% endblock %}
   <div class="jumbotron ws_banner">
    <div class="container">
     <div class="ws_banner_form_div">
+    <img src="/static/images/oncofinder-logo-2.png" style="width: 300px;" />
+    <!-- 
       <form class="ws_banner_form" method="post" action="/signup">
         <input type="text" name="username" class="form-control" placeholder="Pick a username" />
         <input type="text" name="email" class="form-control" placeholder="Your email" />
         <input type="text" name="password" class="form-control" placeholder="Create a password" />
         <input type="submit" disabled="disabled" class="btn btn-lg btn-success" value="Sign up for OncoFinder" />
       </form>
-      <!-- <p>
+      <p>
         clicking "Sign up for OncoFinder", you agree to our <a href="#">terms of service</a>
          and <a href="#">privacy policy</a>. 
       </p>-->
