--- a/oncoFinder2/templates/base_profiles.html
+++ b/oncoFinder2/templates/base_profiles.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="/static/css/bootstrap.css" type='text/css' />
     <link rel="stylesheet" href="/static/css/style.css" type='text/css' />    
     <link href='http://fonts.googleapis.com/css?family=Ubuntu' rel='stylesheet' type='text/css'>
+    <link rel="stylesheet" href="/static/css/jquery.dataTables.css" type='text/css' />
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
@@ -18,6 +19,7 @@
     <![endif]-->
     <script src="/static/js/jquery-2.1.0.min.js"></script>
     <script src="/static/js/bootstrap.js"></script>
+    <script src="/static/js/jquery.dataTables.js"></script>
     <script src="/static/js/oncofinder2.js"></script>
     <script src="/static/js/d3.v2.min.js"></script>
     <script src="/static/js/jsNetworkx.js"></script>
