--- a/oncoFinder2/templates/profiles/_settings_right_bar.html
+++ b/oncoFinder2/templates/profiles/_settings_right_bar.html
@@ -6,7 +6,7 @@
   <div class="panel-body">
     <ul>
       <li ><a href="/settings/profile">Profile</a></li>
-      <li ><a href="/settings/billing">Billing</a></li>
+      <li ><a href="/settings/account">Account</a></li>
     </ul>
   </div>
 </div>
