--- a/oncoFinder2/templates/core/core_calculation_parameters.html
+++ b/oncoFinder2/templates/core/core_calculation_parameters.html
@@ -82,7 +82,10 @@
           
           <div class="form-group form-group-sm">
             <div class="col-sm-10">
-              <label>Include in the report following values:</label>
+              <label>Include in the report following values: 
+                     <span class="glyphicon glyphicon-question-sign" data-toggle="tooltip"  data-placement="top" 
+                                             title="Here will be description of what PMS and DS means"  ></span>
+              </label>
               <div>
                 {{ form.calculate_pms.label_tag }}&nbsp; 
                 {{ form.calculate_pms }} &nbsp;&nbsp;
@@ -91,10 +94,15 @@
                 {{ form.calculate_ds1.label_tag }}&nbsp; 
                 {{ form.calculate_ds1 }}&nbsp;&nbsp;
                 {{ form.calculate_ds2.label_tag }}&nbsp; 
-                {{ form.calculate_ds2 }}&nbsp;&nbsp;&nbsp;&nbsp;
+                {{ form.calculate_ds2 }}&nbsp;&nbsp;&nbsp;&nbsp;<br/>
+                {{ form.calculate_norms_pas.label_tag }}&nbsp;
+                {{ form.calculate_norms_pas }}<br/>
+                {{ form.calculate_pvalue_each.label_tag }}&nbsp;
+                {{ form.calculate_pvalue_each }}<br/>
+                {{ form.calculate_pvalue_all.label_tag }}&nbsp;
+                {{ form.calculate_pvalue_all }}
       </small>
-                <span class="glyphicon glyphicon-question-sign" data-toggle="tooltip"  data-placement="top" 
-                                             title="Here will be description of what PMS and DS means"  ></span>
+                
               </div>                                   
             </div>
           </div> 
