--- a/oncoFinder2/templates/core/core_calculation_parameters.html
+++ b/oncoFinder2/templates/core/core_calculation_parameters.html
@@ -91,10 +91,12 @@
                 {{ form.calculate_pms }} &nbsp;&nbsp;
                 {{ form.calculate_pms1.label_tag }}&nbsp; 
                 {{ form.calculate_pms1 }}&nbsp;&nbsp;
+                {{ form.calculate_pms2.label_tag }}&nbsp; 
+                {{ form.calculate_pms2 }}&nbsp;&nbsp;
                 {{ form.calculate_ds1.label_tag }}&nbsp; 
                 {{ form.calculate_ds1 }}&nbsp;&nbsp;
                 {{ form.calculate_ds2.label_tag }}&nbsp; 
-                {{ form.calculate_ds2 }}&nbsp;&nbsp;&nbsp;&nbsp;<br/>
+                {{ form.calculate_ds2 }}<br/>
                 {{ form.calculate_norms_pas.label_tag }}&nbsp;
                 {{ form.calculate_norms_pas }}<br/>
                 {{ form.calculate_pvalue_each.label_tag }}&nbsp;
