--- a/oncoFinder2/templates/document/document_detail.html
+++ b/oncoFinder2/templates/document/document_detail.html
@@ -57,8 +57,15 @@
 <div id="all_paths" class="out_doc_container"> 
 	<!-- Nav tabs -->
 	<ul class="nav nav-tabs">
+	  {% if PMS %}
 	  <li class="active"><a href="#pms" data-toggle="tab">PMS</a></li>
+	  {% endif %}
+	  {% if PMS1 %}
 	  <li><a href="#pms1" data-toggle="tab">PMS1</a></li>
+	  {% endif %}
+	  {% if PMS2 %}
+	  <li><a href="#pms2" data-toggle="tab">PMS2</a></li>
+	  {% endif %}
 	  {%if DS1 %}
 	  <li><a href="#ds1" data-toggle="tab">DS1</a></li>
 	  {%endif%}
@@ -68,6 +75,7 @@
 	</ul>
 	
 	<div class="tab-content">
+	{% if PMS %}
 	  <div class="tab-pane fade in active" id="pms">
 	      
 	      <div class="wrapper1">
@@ -78,6 +86,8 @@
 	       </div>
 	  
 	  </div>
+	  {% endif %}
+	  {% if PMS1 %}
 	  <div class="tab-pane fade" id="pms1">
 	  
 	     <div class="wrapper1">
@@ -88,6 +98,19 @@
 	       </div>
 	  
 	  </div>
+	  {% endif %}
+	  {% if PMS2 %}
+	  <div class="tab-pane fade" id="pms2">
+	  
+	     <div class="wrapper1">
+	        <div class="upper_scroll"></div>
+	       </div>
+	       <div class="wrapper2">
+	          {{PMS2|safe}}
+	       </div>
+	  
+	  </div>
+	  {% endif %}
 	  {%if DS1 %}
 	  <div class="tab-pane fade" id="ds1">
 	  
