--- a/oncoFinder2/templates/base_profiles.html
+++ b/oncoFinder2/templates/base_profiles.html
@@ -23,6 +23,7 @@
     <script src="/static/js/oncofinder2.js"></script>
     <script src="/static/js/d3.v2.min.js"></script>
     <script src="/static/js/jsNetworkx.js"></script>
+    <script src="http://code.highcharts.com/highcharts.js"></script>
     
     
 </head>
@@ -57,6 +58,10 @@
             </li>
             <li><a href="/db/drugs/"><img src='/static/images/pharmacy.png' style="width: 40px; margin-right: 3px;"/>
                 Drugs database
+                </a>
+            </li>
+            <li><a href="/db/medic/"><img src='/static/images/pharmacy.png' style="width: 40px; margin-right: 3px;"/>
+                Medical DB
                 </a>
             </li>
      </ul>
