--- a/oncoFinder2/templates/project/project_create.html
+++ b/oncoFinder2/templates/project/project_create.html
@@ -14,6 +14,7 @@
                 {{ hidden }}
         {% endfor %}
     {{form}}
+    <br/>
     <button type="submit" class="btn btn-success " style="margin: 0 0 20px 0;"> Create project </button>
   </form>
 </div>
@@ -21,6 +22,13 @@
 <script>
 $(function(){
 	$("#create_project_form > input[type=text], textarea").addClass("form-control");
+	
+	$("#id_nosology").hide();
+	$("#id_field_1").click(function(){
+		if($('#id_field_1').is(':checked')) { $("#id_nosology").show(); }
+	});
+	 
+	
 });
 </script>
 {% endblock %}
