--- a/oncoFinder2/templates/core/test.html
+++ b/oncoFinder2/templates/core/test.html
@@ -8,21 +8,18 @@
 <h1>Testing Playground</h1>
 
 
+{{pathways|length}}
+<table border="1">
+<tr>
 
-
-<h5>ontology = {{ontology}}</h5>
-<h5>pathname = {{pathname}} id={{pathname.id}}</h5>
-{{df|safe}}
-<button class="btn btn-primary" id="start">Start Celery job</button>
-<br/>
-<br/>
-
-<div class="progress">
-  <div class="progress-bar" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100" style="width:1%">
-    0%
-  </div>
-</div>
-
+<th>Gene</th>
+</tr>
+{%for path in pathways %}
+ 
+ <tr>
+ <td>{{path.name}}</td>
+ </tr>
+ {%endfor%}
 
 
 
