--- a/oncoFinder2/templates/document/document_detail.html
+++ b/oncoFinder2/templates/document/document_detail.html
@@ -67,7 +67,10 @@
 	  <li><a href="#pms2" data-toggle="tab">PMS2</a></li>
 	  {% endif %}
 	  {%if DS1 %}
-	  <li><a href="#ds1" data-toggle="tab">DS1</a></li>
+	  <li><a href="#ds1" data-toggle="tab">DS1A</a></li>
+	  {%endif%}
+	  {%if DS1B %}
+	  <li><a href="#ds1b" data-toggle="tab">DS1B</a></li>
 	  {%endif%}
 	  {%if DS2%}
 	  <li><a href="#ds2" data-toggle="tab">DS2</a></li>
@@ -123,7 +126,19 @@
 	  
 	  </div>
 	  {%endif%}
-	  {%if DS1 %}
+	  {%if DS1B %}
+	  <div class="tab-pane fade" id="ds1b">
+	  
+	      <div class="wrapper1">
+	        <div class="upper_scroll"></div>
+	       </div>
+	       <div class="wrapper2">
+	          {{DS1B|safe}}
+	       </div>
+	  
+	  </div>
+	  {%endif%}
+	  {%if DS2 %}
 	  <div class="tab-pane fade" id="ds2">
 	  
 	      <div class="wrapper1">
