medical project done 1

--- a/oncoFinder2/templates/document/medic_doc_detail.html
+++ b/oncoFinder2/templates/document/medic_doc_detail.html
@@ -32,41 +32,16 @@
 
 
 
-<div id="container" style="width:900px; height:400px;">
-</div>
-<script>
+<h2>Treatment methods:</h2>
+<ul>
+    {%for treatment in treatments%}
+        <li>
+        <a href="treat{{treatment.id}}/" >{{treatment}}</a>
+        </li>
+{%endfor%}
+</ul>
 
-$(function () {
-    $('#container').highcharts({
-    	chart: {
-            type: 'column'
-        },
-        title: {
-            text: 'Responders-nonresponders histogram'
-        },
-        xAxis: {
-            minPadding: 0.05,
-            maxPadding: 0.05
-        },
 
-        series: [{
-        	name: 'NonResponders',
-            data: [
-               {% for key, value in nres.items  %}
-                [{{key}}, {{value}}],
-               {%endfor%} 
-            ]
-        },{
-        name: 'Responders',
-        data: [
-			{% for key, value in res.items  %}
-			[{{key}}, {{value}}],
-			{%endfor%} 
-               ]}]
-    });
-});
-
-</script>
 
 
 
