--- a/oncoFinder2/templates/medic/patient_treatment_detail.html
+++ b/oncoFinder2/templates/medic/patient_treatment_detail.html
@@ -17,7 +17,7 @@
         <li ><a href="#fragment-1" data-toggle="tab"><span>Probability Table </span></a></li>
         <li><a href="#fragment-2" data-toggle="tab"><span>PAS1 Table</span></a></li>
         <li class="active"><a href="#fragment-3" data-toggle="tab"><span>Histogram</span></a></li>
-        <li ><a href="#fragment-4" data-toggle="tab"><span>Graphic Scheme</span></a></li>
+        
     </ul>
 <div id="tabContent" class="tab-content">
 <div id="fragment-1" class="tab-pane fade  well">
@@ -27,7 +27,10 @@
 {{PMS1|safe}}
 </div> 
 <div id="fragment-3" class="tab-pane in active fade">
-
+    <h4>
+      <div style="float:left; width:15px; height:15px; background-color: red"></div>&nbsp; - 
+      This patient is nonresponder. Responce score = {{patient_votes}}
+    </h4>
 <div id="container" style="width:900px; height:400px;">
 
 
@@ -65,16 +68,7 @@
 
 
 
-<div id="fragment-4" class="tab-pane in active fade">
 
-<div id="container4" style="width:900px; height:400px;">
-dsg
-
-</div>
-
-
-
-</div>
 </div>
 </div>
 
@@ -90,6 +84,7 @@ $(function () {
         title: {
             text: 'Responders-nonresponders histogram'
         },
+        
         xAxis: {
         	title: {
         		text: 'Response score'
@@ -108,7 +103,12 @@ $(function () {
         	name: 'NonResponders',
             data: [
                {% for key, value in nres.items  %}
-                [{{key}}, {{value}}],
+                {% if key == patient_votes %}
+                {x:{{key}}, y:{{value}}, color:'red'},
+                {% else %}
+                {x:{{key}}, y:{{value}}},
+                {%endif%}
+                
                {%endfor%} 
             ]
         },{
@@ -123,44 +123,6 @@ $(function () {
 
 
 
-$(function () {
-    $('#container4').highcharts({
-    	chart: {
-            type: 'area'
-        },
-        title: {
-            text: 'Responders-nonresponders histogram'
-        },
-        xAxis: {
-        	title: {
-        		text: 'Response score'
-        	},
-            minPadding: 0.05,
-            maxPadding: 0.05
-        },
-        
-        yAxis:{
-        	 title: {
-                 text: "Ratio of patients(%)"
-             }
-        },
-
-        series: [{
-        	name: 'NonResponders',
-            data: [
-               {% for key, value in nres.items  %}
-                [{{key}}, {{value}}],
-               {%endfor%} 
-            ]
-        },{
-        name: 'Responders',
-        data: [
-			{% for key, value in res.items  %}
-			[{{key}}, {{value}}],
-			{%endfor%} 
-               ]}]
-    });
-});
 
 
 </script>
